# plain_example

./: Cargo.toml
api/: Cargo.toml
api/src/: api.rs  lib.rs
cli/: Cargo.toml
cli/src/: main.rs
custom/: Cargo.toml
custom/src/: lib.rs
gui/: Cargo.toml
gui/src/: main.rs
main/: Cargo.toml
main/src/: main.rs
