[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom = { path = "../custom" }

# plain_types = { git = "https://github.com/nchashch/plain" }
# plain_api = { git = "https://github.com/nchashch/plain" }
# plain_wallet = { git = "https://github.com/nchashch/plain" }
# plain_miner = { git = "https://github.com/nchashch/plain" }

plain_types = { path = "../../plain/types" }
plain_api = { path = "../../plain/api" }
plain_wallet = { path = "../../plain/wallet" }
plain_miner = { path = "../../plain/miner" }

bincode = "1.3.3"
clap = { version = "4.3.9", features = ["derive"] }
project-root = "0.2.2"
rpassword = "7.2.0"
sha256 = "1.1.4"
tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.71"
bip39 = "2.0.0"
