[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custom = { path = "../custom" }

plain_api = { git = "https://github.com/nchashch/plain" }
plain_node = { git = "https://github.com/nchashch/plain" }

heed = { git = "https://github.com/meilisearch/heed", tag = "v0.12.4" }
anyhow = "1.0.71"
clap = { version = "4.3.9", features = ["derive"] }
prost = "0.11.9"
tonic = "0.9.2"
project-root = "0.2.2"
tokio = { version = "1.29.0", features = ["rt-multi-thread", "macros"] }
